tests/NormalTests/paczka1/small_fuzzy/22327236.err
Error in line 2: ADFggfmW6 S986 46,4
Error in line 11: ADFggfmW6 S359 12,5
